Căn chỉnh vùng hiển thị lựa chọn ngôn ngữ

--- a/www/sites/datalogger.dhxd.net/themes/datalogger/css/style.css
+++ b/www/sites/datalogger.dhxd.net/themes/datalogger/css/style.css
@@ -590,6 +590,7 @@ h1#site-name {
 /* ----------------- Content ------------------ */
 .content {
 	margin-top: 10px;
+  width: 130px;
 }
 
 h1#page-title {
