Thay đổi màu nền hiển thị thông tin trạm trên bản đồ

--- a/www/sites/domua.khituongthuyvan.net/modules/features/openlayers/themes/default_dark/style.css
+++ b/www/sites/domua.khituongthuyvan.net/modules/features/openlayers/themes/default_dark/style.css
@@ -27,6 +27,10 @@
   color: #EEEEEE;
 }
 
+#popup_FrameDecorationImg_0{
+  background-color:rgba(104, 122, 47, 0.68);
+}
+
 
 /**
  * The following are images that are not in
