--- a/www/sites/domua.khituongthuyvan.net/themes/datalogger/css/cam.css
+++ b/www/sites/domua.khituongthuyvan.net/themes/datalogger/css/cam.css
@@ -1,3 +1,3 @@
-#header {
-    background-image: -moz-linear-gradient(center top , #BB4A00 0%, #BB4A00 100%) !important;
+#header { 
+    background:#BB4A00 !important;
 }
