--- a/www/sites/domua.khituongthuyvan.net/themes/datalogger/css/do.css
+++ b/www/sites/domua.khituongthuyvan.net/themes/datalogger/css/do.css
@@ -1,3 +1,3 @@
 #header {
-    background-image: -moz-linear-gradient(center top , #A00000 0%, #A00000 100%) !important;
+    background:#A00000 !important; /* Firefox */
 }
