--- a/www/sites/domua.khituongthuyvan.net/themes/datalogger/css/xanhdatroi.css
+++ b/www/sites/domua.khituongthuyvan.net/themes/datalogger/css/xanhdatroi.css
@@ -1,3 +1,3 @@
 #header {
-    background-image: -moz-linear-gradient(center top , #0000A6 0%, #0000A6 100%) !important;
+    background:#0000A6 !important;
 }
