Thay đổi màu nền trong pop-up trên bản đồ.

--- a/www/sites/domua.khituongthuyvan.net/modules/features/openlayers/themes/default_dark/openlayers_style.css
+++ b/www/sites/domua.khituongthuyvan.net/modules/features/openlayers/themes/default_dark/openlayers_style.css
@@ -272,6 +272,7 @@ div.olControlSaveFeaturesItemInactive {
 .olFramedCloudPopupContent {
     padding: 5px;
     overflow: auto;
+    background:none repeat scroll 0 0 #FFFFFF;
 }
 
 .olControlNoSelect {
