--- a/www/sites/domua.khituongthuyvan.net/modules/features/openlayers/themes/default_dark/style.css
+++ b/www/sites/domua.khituongthuyvan.net/modules/features/openlayers/themes/default_dark/style.css
@@ -24,7 +24,8 @@
  * A few custom styles
  */
 .openlayers-popup {
-  color: #EEEEEE;
+  /*color: #EEEEEE;*/
+  color: #000000;
 }
 
 #popup_FrameDecorationImg_0{
