Sua loi tin nhan nhan ve.

--- a/www/sites/domua.khituongthuyvan.net/themes/datalogger/css/style.css
+++ b/www/sites/domua.khituongthuyvan.net/themes/datalogger/css/style.css
@@ -1824,3 +1824,11 @@ div.admin-panel .description {
 #footer-wrapper .poll .bar .foreground {
 	background-color: #ddd;
 }
+
+/* Gia tri tra ve trong form command */
+div.field-name-field-command-result div.field-items div.field-item {
+  font-weight: bold;
+  font-size: 12pt;
+  background: blue;
+  color: white;
+}
