Cập nhật sửa đổi giao diện, chứ năng 11/01/2013.

--- a/www/sites/domua.khituongthuyvan.net/themes/datalogger/css/style.css
+++ b/www/sites/domua.khituongthuyvan.net/themes/datalogger/css/style.css
@@ -595,6 +595,10 @@ h1#site-name {
 	margin-top: 10px;
   width: 180px;  
 }
+.field-item p{
+	margin-top: 10px;
+  width: 680px;  
+}
 
 h1#page-title {
 	font-size: 2em;
