--- a/www/sites/all/modules/features/panels/plugins/layouts/twocol/twocol.css
+++ b/www/sites/all/modules/features/panels/plugins/layouts/twocol/twocol.css
@@ -5,10 +5,10 @@
 
 .panel-2col .panel-col-first { 
   float: left; 
-  width: 50%; 
+  width: 250px; 
 }
 * html .panel-2col .panel-col-first {
-  width: 49.9%;
+  width: 650px;
 }
 
 .panel-2col .panel-col-first .inside { 
