--- a/www/sites/domua.khituongthuyvan.net/themes/datalogger/css/style.css
+++ b/www/sites/domua.khituongthuyvan.net/themes/datalogger/css/style.css
@@ -1904,9 +1904,10 @@ div#header.with-secondary-menu div.section div.section div.region div#block-loca
 
 
 /* command form */
-form#-command-form div div.form-item select.form-select
+form#-command-form div div.form-item select.form-select,
+form#-datalogger-report-rainfall-month-form div div.form-item select.form-select
  {
-  width: 200px;
+  width: 234px;
 }
 
 form#-command-form div div.form-item select#edit-command-selects.form-select {
@@ -1921,3 +1922,15 @@ div.title {
 div#header {
   height: 186px;
 }
+
+fieldset#edit-stations-fieldset.form-wrapper,
+fieldset#edit-person.form-wrapper
+{
+  float: left;
+  width: 48%;
+  height: 426px;
+}
+ 
+
+
+
