--- a/www/sites/domua.khituongthuyvan.net/modules/features/openlayers/themes/default_dark/openlayers_style.css
+++ b/www/sites/domua.khituongthuyvan.net/modules/features/openlayers/themes/default_dark/openlayers_style.css
@@ -132,7 +132,7 @@ div.olControlMousePosition {
 
 .olPopupContent {
     padding:5px;
-    overflow: auto;
+    /*overflow: auto;*/
 }
 
 .olControlNavigationHistory {
@@ -264,7 +264,7 @@ div.olControlSaveFeaturesItemInactive {
 
 .olFramedCloudPopupContent {
     padding: 5px;
-    overflow: auto;
+    /*overflow: auto;*/
 }
 
 .olControlNoSelect {
