--- a/www/sites/domua.khituongthuyvan.net/modules/features/panels/plugins/layouts/twocol/twocol.css
+++ b/www/sites/domua.khituongthuyvan.net/modules/features/panels/plugins/layouts/twocol/twocol.css
@@ -5,10 +5,10 @@
 
 .panel-2col .panel-col-first { 
   float: left; 
-  width: 250px; 
+  width: 50%; 
 }
 * html .panel-2col .panel-col-first {
-  width: 650px;
+  width: 49.9%;
 }
 
 .panel-2col .panel-col-first .inside { 
@@ -17,10 +17,10 @@
 
 .panel-2col .panel-col-last { 
   float: left; 
-  width: 650px; 
+  width: 50%; 
 }
 * html .panel-2col .panel-col-last {
-  width: 650px;
+  width: 49.9%;
 }
 
 .panel-2col .panel-col-last .inside { 
